// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@rushstack/rush-sdk Should load via env when Rush has loaded (for child processes): stderr 1`] = `""`;

exports[`@rushstack/rush-sdk Should load via env when Rush has loaded (for child processes): stdout 1`] = `
"Try to load @microsoft/rush-lib from process.env._RUSH_LIB_PATH from caller package
Loaded @microsoft/rush-lib from process.env._RUSH_LIB_PATH
[
  'ApprovedPackagesConfiguration',
  'ApprovedPackagesItem',
  'ApprovedPackagesPolicy',
  'BuildCacheConfiguration',
  'BumpType',
  'ChangeManager',
  'CobuildConfiguration',
  'CommonVersionsConfiguration',
  'CredentialCache',
  'CustomTipId',
  'CustomTipSeverity',
  'CustomTipType',
  'CustomTipsConfiguration',
  'DependencyType',
  'EnvironmentConfiguration',
  'EnvironmentVariableNames',
  'Event',
  'EventHooks',
  'ExperimentsConfiguration',
  'FileSystemBuildCacheProvider',
  'IndividualVersionPolicy',
  'LockStepVersionPolicy',
  'LookupByPath',
  'NpmOptionsConfiguration',
  'Operation',
  'OperationStatus',
  'PackageJsonDependency',
  'PackageJsonDependencyMeta',
  'PackageJsonEditor',
  'PackageManager',
  'PackageManagerOptionsConfigurationBase',
  'PhasedCommandHooks',
  'PnpmOptionsConfiguration',
  'ProjectChangeAnalyzer',
  'RepoStateFile',
  'Rush',
  'RushCommandLine',
  'RushConfiguration',
  'RushConfigurationProject',
  'RushConstants',
  'RushLifecycleHooks',
  'RushProjectConfiguration',
  'RushSession',
  'RushUserConfiguration',
  'Subspace',
  'SubspacesConfiguration',
  'VersionPolicy',
  'VersionPolicyConfiguration',
  'VersionPolicyDefinitionName',
  'YarnOptionsConfiguration',
  '_FlagFile',
  '_OperationBuildCache',
  '_OperationMetadataManager',
  '_OperationStateFile',
  '_RushGlobalFolder',
  '_RushInternals',
  '_rushSdk_loadInternalModule'
]"
`;

exports[`@rushstack/rush-sdk Should load via global (for plugins): stderr 1`] = `""`;

exports[`@rushstack/rush-sdk Should load via global (for plugins): stdout 1`] = `
"[
  '_rushSdk_loadInternalModule',
  'foo'
]"
`;

exports[`@rushstack/rush-sdk Should load via install-run (for standalone tools): stderr 1`] = `""`;

exports[`@rushstack/rush-sdk Should load via install-run (for standalone tools): stdout 1`] = `
"Try to load @microsoft/rush-lib from rush global folder
The expected global rush installed folder is \\"<RUSH_GLOBAL_FOLDER>/node-v22.20.0/rush-5.57.0\\"
Failed to load @microsoft/rush-lib from rush global folder: File does not exist: <RUSH_GLOBAL_FOLDER>/node-v22.20.0/rush-5.57.0
ENOENT: no such file or directory, lstat '<RUSH_GLOBAL_FOLDER>/node-v22.20.0/rush-5.57.0'
Trying to load  @microsoft/rush-lib installed by install-run-rush
Loaded @microsoft/rush-lib installed by install-run-rush
[
  '_rushSdk_loadInternalModule',
  'foo'
]"
`;

exports[`@rushstack/rush-sdk Should load via process.env._RUSH_LIB_PATH (for child processes): stderr 1`] = `""`;

exports[`@rushstack/rush-sdk Should load via process.env._RUSH_LIB_PATH (for child processes): stdout 1`] = `
"Try to load @microsoft/rush-lib from process.env._RUSH_LIB_PATH from caller package
Loaded @microsoft/rush-lib from process.env._RUSH_LIB_PATH
[
  '_rushSdk_loadInternalModule',
  'foo'
]"
`;
